--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ html{
     --transition : all .4s ease-in-out;
 }
 
+
+
 nav{
     z-index: 900;
     height: 4em;
@@ -84,7 +86,7 @@ nav{
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 2px;
+    height: 3px;
     width: 100%;
     border-radius: .5em;
     background-color: var(--blue_dark);
@@ -120,11 +122,11 @@ nav .menu-icon{
 }
 
 .menu-responsive{
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     height: 100vh;
-    width: 50vw;
+    width: 40vw;
     z-index: 1000;
     background-color: var(--white);
     box-shadow: -10px 0 15px #001c304c;
@@ -143,10 +145,10 @@ nav .menu-icon{
 }
 .menu-responsive img{
     position: absolute;
-    height: 1.5em;
+    height: 2em;
     top: 1em;
     left: 1em;
-
+    cursor: pointer;
 }
 
 .menu-responsive li{
@@ -175,8 +177,31 @@ section.home{
     display: flex;
     align-items: center;
     justify-content: center;
-   
+    position: relative;
 
+}
+
+.blur-effect{
+    height: 70%;
+    width: 30%;
+    background-color: #001c303d;
+    border-radius: 50%;
+    position: absolute;
+    left: -20%;
+    bottom: 0;
+    filter: blur(100px);
+    animation: homeAnimationBlur 5s infinite alternate
+     ;
+}
+
+
+
+@keyframes homeAnimationBlur {
+    0%{
+        bottom: 0;
+    }100%{
+        bottom: 50%;
+    }
 }
 
 .home .info--home{
@@ -208,7 +233,7 @@ section.home{
     overflow: hidden;
     white-space: nowrap;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight:400;
     color: var(--blue_dark);
 }
@@ -330,7 +355,7 @@ section.home{
 
 .about-section{
     width: 80%;
-    height: 90vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -375,9 +400,10 @@ section.home{
 }
 
 .contact-section p{
-    font-size: 1em;
+    font-size: 1.1em;
     color: var(--blue_dark);
     font-weight: 500;
+    text-align: center;
 }
 
 .contact-section button{
@@ -459,8 +485,8 @@ section.home{
     }
 
     .product-card {
-        width: 90%;
-        height: auto;
+        width: 75%;
+        height: 30em;
         padding: .5em .3em;
         margin: 1em 0;
         gap: .5em;
@@ -494,12 +520,17 @@ section.home{
         font-size: 0.8em;
     }
 
+    .contact-section{
+        height: 65vh;
+        justify-content: space-evenly;
+    }
     .contact-section h3 {
         font-size: 1.4em;
     }
 
     .contact-section p {
         font-size: 0.9em;
+        text-align: center;
     }
 
     .contact-section button {
